<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBlack">


   <RelativeLayout
       android:id="@+id/layout1"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_above="@+id/layout2">


       <TextView
           android:id="@+id/txtResult"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_marginRight="35dp"
           android:textColor="#ffffff"
           android:textSize="30sp"
           android:maxLines="1"
           android:gravity="right"/>


   </RelativeLayout>



    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

    <TableLayout
        android:id="@+id/tblLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnAC"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_up"
                android:layout_column="0"
                android:text="@string/ac"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnMemory"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_up"
                android:layout_column="1"
                android:text="@string/memory"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnPercent"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_up"
                android:layout_column="3"
                android:text="@string/percent"
                android:textSize="35sp"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnDivide"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_transactions"
                android:layout_column="4"
                android:text="@string/divide"
                android:textColor="@color/colorWhite"
                android:textSize="35sp" />
        </TableRow>
        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnSeven"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="0"
                android:text="@string/seven"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnEight"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:text="@string/eight"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnNine"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="3"
                android:text="@string/nine"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnMultiplication"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_transactions"
                android:layout_margin="5dp"
                android:layout_column="4"
                android:text="@string/multiplaction"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        </TableRow>
        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnFour"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="0"
                android:text="@string/four"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnFive"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:text="@string/five"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnSix"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="3"
                android:text="@string/six"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnExtraction"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_transactions"
                android:layout_margin="5dp"
                android:layout_column="4"
                android:text="@string/extraction"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        </TableRow>
        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnOne"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="0"
                android:text="@string/one"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnTwo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:text="@string/two"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnThree"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_numbers"
                android:layout_margin="5dp"
                android:layout_column="3"
                android:text="@string/three"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/button_transactions"
                android:layout_margin="5dp"
                android:layout_column="4"
                android:text="@string/add"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        </TableRow>


    </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tblLayout1">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="160dp"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/zero"
                    android:gravity="left|start|center_vertical"
                    android:paddingLeft="20dp"
                    android:textSize="35sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_numbers" />
                <Button
                    android:id="@+id/btnCommo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/comma"
                    android:textSize="30sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:background="@drawable/button_numbers" />
                <Button
                    android:id="@+id/btnEqual"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_transactions"
                    android:text="@string/equal"
                    android:textColor="#ffffff"
                    android:textSize="30sp"/>

            </TableRow>



        </TableLayout>

    </RelativeLayout>




</RelativeLayout>